api/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> <empty>
Rule 2     statement -> TYPE COLON decl_names
Rule 3     decl_names -> NAME decl_names_m
Rule 4     decl_names_m -> COMMA NAME decl_names_m
Rule 5     decl_names_m -> <empty>
Rule 6     statement -> TYPE COLON NAME ASSIGN value
Rule 7     statement -> NAME ASSIGN value
Rule 8     statement -> TYPE NO ARRAY COLON NAME ASSIGN init_array
Rule 9     init_array -> L_C_BRACKET R_C_BRACKET
Rule 10    init_array -> L_C_BRACKET init_array_val R_C_BRACKET
Rule 11    init_array_val -> init_array_val COMMA NUMBER
Rule 12    init_array_val -> NUMBER
Rule 13    statement -> NAME L_S_BRACKET value R_S_BRACKET ASSIGN value
Rule 14    statement -> NAME NO END NI value WO ADD
Rule 15    statement -> value WO OUT
Rule 16    params -> <empty>
Rule 17    params -> TYPE COLON NAME params_m
Rule 18    params -> TYPE NO ARRAY COLON NAME params_m
Rule 19    params_m -> COMMA TYPE COLON NAME params_m
Rule 20    params_m -> COMMA TYPE NO ARRAY COLON NAME params_m
Rule 21    params_m -> <empty>
Rule 22    statement -> CIRCLE NAME L_PAREN params R_PAREN
Rule 23    statement -> CIRCLE TYPE COLON NAME L_PAREN params R_PAREN
Rule 24    statement -> CIRCLE TYPE NO ARRAY COLON NAME L_PAREN params R_PAREN
Rule 25    args -> <empty>
Rule 26    args -> value args_m
Rule 27    args_m -> COMMA value args_m
Rule 28    args_m -> <empty>
Rule 29    statement -> NAME L_PAREN args R_PAREN
Rule 30    statement -> NAME ASSIGN NAME L_PAREN args R_PAREN
Rule 31    statement -> TYPE COLON NAME ASSIGN NAME L_PAREN args R_PAREN
Rule 32    statement -> RETURN
Rule 33    statement -> RETURN value
Rule 34    statement -> IF L_PAREN conditional R_PAREN
Rule 35    statement -> ELSEIF L_PAREN conditional R_PAREN
Rule 36    statement -> ELSE
Rule 37    statement -> ENDIF
Rule 38    conditional -> value sign value
Rule 39    sign -> EQUAL
Rule 40    sign -> NOT EQUAL
Rule 41    sign -> NOT2
Rule 42    sign -> LESS
Rule 43    sign -> LESS EQUAL
Rule 44    sign -> LESS_EQUAL
Rule 45    sign -> GREATER
Rule 46    sign -> GREATER EQUAL
Rule 47    sign -> GREATER_EQUAL
Rule 48    statement -> FOR L_PAREN NAME WO value KARA value MADE NUMBER ZUTSU INCREASE R_PAREN
Rule 49    statement -> WHILE L_PAREN conditional R_PAREN
Rule 50    statement -> DO
Rule 51    value -> NUMBER
Rule 52    value -> NAME
Rule 53    value -> NAME L_S_BRACKET value R_S_BRACKET
Rule 54    value -> NAME L_S_BRACKET value R_S_BRACKET NO VALUE
Rule 55    value -> NAME NO ARR_LEN
Rule 56    value -> L_PAREN value R_PAREN
Rule 57    value -> L_PAREN value R_PAREN NO RESULT
Rule 58    value -> value PLUS value
Rule 59    value -> value MINUS value
Rule 60    value -> value MULTI value
Rule 61    value -> value DIVID value division_tail
Rule 62    division_tail -> NO SHOW
Rule 63    division_tail -> <empty>

Terminals, with rules where they appear

ADD                  : 14
ARRAY                : 8 18 20 24
ARR_LEN              : 55
ASSIGN               : 6 7 8 13 30 31
CIRCLE               : 22 23 24
COLON                : 2 6 8 17 18 19 20 23 24 31
COMMA                : 4 11 19 20 27
DIVID                : 61
DO                   : 50
ELSE                 : 36
ELSEIF               : 35
END                  : 14
ENDIF                : 37
EQUAL                : 39 40 43 46
FOR                  : 48
GREATER              : 45 46
GREATER_EQUAL        : 47
IF                   : 34
INCREASE             : 48
KARA                 : 48
LESS                 : 42 43
LESS_EQUAL           : 44
L_C_BRACKET          : 9 10
L_PAREN              : 22 23 24 29 30 31 34 35 48 49 56 57
L_S_BRACKET          : 13 53 54
MADE                 : 48
MINUS                : 59
MULTI                : 60
NAME                 : 3 4 6 7 8 13 14 17 18 19 20 22 23 24 29 30 30 31 31 48 52 53 54 55
NI                   : 14
NO                   : 8 14 18 20 24 54 55 57 62
NOT                  : 40
NOT2                 : 41
NUMBER               : 11 12 48 51
OUT                  : 15
PLUS                 : 58
RESULT               : 57
RETURN               : 32 33
R_C_BRACKET          : 9 10
R_PAREN              : 22 23 24 29 30 31 34 35 48 49 56 57
R_S_BRACKET          : 13 53 54
SHOW                 : 62
TYPE                 : 2 6 8 17 18 19 20 23 24 31
VALUE                : 54
WHILE                : 49
WO                   : 14 15 48
ZUTSU                : 48
error                : 

Nonterminals, with rules where they appear

args                 : 29 30 31
args_m               : 26 27
conditional          : 34 35 49
decl_names           : 2
decl_names_m         : 3 4
division_tail        : 61
init_array           : 8
init_array_val       : 10 11
params               : 22 23 24
params_m             : 17 18 19 20
sign                 : 38
statement            : 0
value                : 6 7 13 13 14 15 26 27 33 38 38 48 48 53 54 56 57 58 58 59 59 60 60 61 61

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> .
    (2) statement -> . TYPE COLON decl_names
    (6) statement -> . TYPE COLON NAME ASSIGN value
    (7) statement -> . NAME ASSIGN value
    (8) statement -> . TYPE NO ARRAY COLON NAME ASSIGN init_array
    (13) statement -> . NAME L_S_BRACKET value R_S_BRACKET ASSIGN value
    (14) statement -> . NAME NO END NI value WO ADD
    (15) statement -> . value WO OUT
    (22) statement -> . CIRCLE NAME L_PAREN params R_PAREN
    (23) statement -> . CIRCLE TYPE COLON NAME L_PAREN params R_PAREN
    (24) statement -> . CIRCLE TYPE NO ARRAY COLON NAME L_PAREN params R_PAREN
    (29) statement -> . NAME L_PAREN args R_PAREN
    (30) statement -> . NAME ASSIGN NAME L_PAREN args R_PAREN
    (31) statement -> . TYPE COLON NAME ASSIGN NAME L_PAREN args R_PAREN
    (32) statement -> . RETURN
    (33) statement -> . RETURN value
    (34) statement -> . IF L_PAREN conditional R_PAREN
    (35) statement -> . ELSEIF L_PAREN conditional R_PAREN
    (36) statement -> . ELSE
    (37) statement -> . ENDIF
    (48) statement -> . FOR L_PAREN NAME WO value KARA value MADE NUMBER ZUTSU INCREASE R_PAREN
    (49) statement -> . WHILE L_PAREN conditional R_PAREN
    (50) statement -> . DO
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    $end            reduce using rule 1 (statement -> .)
    TYPE            shift and go to state 2
    NAME            shift and go to state 3
    CIRCLE          shift and go to state 5
    RETURN          shift and go to state 7
    IF              shift and go to state 8
    ELSEIF          shift and go to state 9
    ELSE            shift and go to state 10
    ENDIF           shift and go to state 11
    FOR             shift and go to state 12
    WHILE           shift and go to state 14
    DO              shift and go to state 15
    NUMBER          shift and go to state 13
    L_PAREN         shift and go to state 6

    statement                      shift and go to state 1
    value                          shift and go to state 4

state 1

    (0) S' -> statement .



state 2

    (2) statement -> TYPE . COLON decl_names
    (6) statement -> TYPE . COLON NAME ASSIGN value
    (8) statement -> TYPE . NO ARRAY COLON NAME ASSIGN init_array
    (31) statement -> TYPE . COLON NAME ASSIGN NAME L_PAREN args R_PAREN

    COLON           shift and go to state 16
    NO              shift and go to state 17


state 3

    (7) statement -> NAME . ASSIGN value
    (13) statement -> NAME . L_S_BRACKET value R_S_BRACKET ASSIGN value
    (14) statement -> NAME . NO END NI value WO ADD
    (29) statement -> NAME . L_PAREN args R_PAREN
    (30) statement -> NAME . ASSIGN NAME L_PAREN args R_PAREN
    (52) value -> NAME .
    (53) value -> NAME . L_S_BRACKET value R_S_BRACKET
    (54) value -> NAME . L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> NAME . NO ARR_LEN

    ASSIGN          shift and go to state 18
    L_S_BRACKET     shift and go to state 19
    NO              shift and go to state 20
    L_PAREN         shift and go to state 21
    WO              reduce using rule 52 (value -> NAME .)
    PLUS            reduce using rule 52 (value -> NAME .)
    MINUS           reduce using rule 52 (value -> NAME .)
    MULTI           reduce using rule 52 (value -> NAME .)
    DIVID           reduce using rule 52 (value -> NAME .)


state 4

    (15) statement -> value . WO OUT
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail

    WO              shift and go to state 22
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26


state 5

    (22) statement -> CIRCLE . NAME L_PAREN params R_PAREN
    (23) statement -> CIRCLE . TYPE COLON NAME L_PAREN params R_PAREN
    (24) statement -> CIRCLE . TYPE NO ARRAY COLON NAME L_PAREN params R_PAREN

    NAME            shift and go to state 27
    TYPE            shift and go to state 28


state 6

    (56) value -> L_PAREN . value R_PAREN
    (57) value -> L_PAREN . value R_PAREN NO RESULT
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    value                          shift and go to state 29

state 7

    (32) statement -> RETURN .
    (33) statement -> RETURN . value
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    $end            reduce using rule 32 (statement -> RETURN .)
    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    value                          shift and go to state 31

state 8

    (34) statement -> IF . L_PAREN conditional R_PAREN

    L_PAREN         shift and go to state 32


state 9

    (35) statement -> ELSEIF . L_PAREN conditional R_PAREN

    L_PAREN         shift and go to state 33


state 10

    (36) statement -> ELSE .

    $end            reduce using rule 36 (statement -> ELSE .)


state 11

    (37) statement -> ENDIF .

    $end            reduce using rule 37 (statement -> ENDIF .)


state 12

    (48) statement -> FOR . L_PAREN NAME WO value KARA value MADE NUMBER ZUTSU INCREASE R_PAREN

    L_PAREN         shift and go to state 34


state 13

    (51) value -> NUMBER .

    WO              reduce using rule 51 (value -> NUMBER .)
    PLUS            reduce using rule 51 (value -> NUMBER .)
    MINUS           reduce using rule 51 (value -> NUMBER .)
    MULTI           reduce using rule 51 (value -> NUMBER .)
    DIVID           reduce using rule 51 (value -> NUMBER .)
    R_PAREN         reduce using rule 51 (value -> NUMBER .)
    $end            reduce using rule 51 (value -> NUMBER .)
    R_S_BRACKET     reduce using rule 51 (value -> NUMBER .)
    COMMA           reduce using rule 51 (value -> NUMBER .)
    NO              reduce using rule 51 (value -> NUMBER .)
    EQUAL           reduce using rule 51 (value -> NUMBER .)
    NOT             reduce using rule 51 (value -> NUMBER .)
    NOT2            reduce using rule 51 (value -> NUMBER .)
    LESS            reduce using rule 51 (value -> NUMBER .)
    LESS_EQUAL      reduce using rule 51 (value -> NUMBER .)
    GREATER         reduce using rule 51 (value -> NUMBER .)
    GREATER_EQUAL   reduce using rule 51 (value -> NUMBER .)
    KARA            reduce using rule 51 (value -> NUMBER .)
    MADE            reduce using rule 51 (value -> NUMBER .)


state 14

    (49) statement -> WHILE . L_PAREN conditional R_PAREN

    L_PAREN         shift and go to state 35


state 15

    (50) statement -> DO .

    $end            reduce using rule 50 (statement -> DO .)


state 16

    (2) statement -> TYPE COLON . decl_names
    (6) statement -> TYPE COLON . NAME ASSIGN value
    (31) statement -> TYPE COLON . NAME ASSIGN NAME L_PAREN args R_PAREN
    (3) decl_names -> . NAME decl_names_m

    NAME            shift and go to state 37

    decl_names                     shift and go to state 36

state 17

    (8) statement -> TYPE NO . ARRAY COLON NAME ASSIGN init_array

    ARRAY           shift and go to state 38


state 18

    (7) statement -> NAME ASSIGN . value
    (30) statement -> NAME ASSIGN . NAME L_PAREN args R_PAREN
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NAME            shift and go to state 39
    NUMBER          shift and go to state 13
    L_PAREN         shift and go to state 6

    value                          shift and go to state 40

state 19

    (13) statement -> NAME L_S_BRACKET . value R_S_BRACKET ASSIGN value
    (53) value -> NAME L_S_BRACKET . value R_S_BRACKET
    (54) value -> NAME L_S_BRACKET . value R_S_BRACKET NO VALUE
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    value                          shift and go to state 41

state 20

    (14) statement -> NAME NO . END NI value WO ADD
    (55) value -> NAME NO . ARR_LEN

    END             shift and go to state 42
    ARR_LEN         shift and go to state 43


state 21

    (29) statement -> NAME L_PAREN . args R_PAREN
    (25) args -> .
    (26) args -> . value args_m
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    R_PAREN         reduce using rule 25 (args -> .)
    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    args                           shift and go to state 44
    value                          shift and go to state 45

state 22

    (15) statement -> value WO . OUT

    OUT             shift and go to state 46


state 23

    (58) value -> value PLUS . value
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    value                          shift and go to state 47

state 24

    (59) value -> value MINUS . value
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    value                          shift and go to state 48

state 25

    (60) value -> value MULTI . value
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    value                          shift and go to state 49

state 26

    (61) value -> value DIVID . value division_tail
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    value                          shift and go to state 50

state 27

    (22) statement -> CIRCLE NAME . L_PAREN params R_PAREN

    L_PAREN         shift and go to state 51


state 28

    (23) statement -> CIRCLE TYPE . COLON NAME L_PAREN params R_PAREN
    (24) statement -> CIRCLE TYPE . NO ARRAY COLON NAME L_PAREN params R_PAREN

    COLON           shift and go to state 52
    NO              shift and go to state 53


state 29

    (56) value -> L_PAREN value . R_PAREN
    (57) value -> L_PAREN value . R_PAREN NO RESULT
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail

    R_PAREN         shift and go to state 54
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26


state 30

    (52) value -> NAME .
    (53) value -> NAME . L_S_BRACKET value R_S_BRACKET
    (54) value -> NAME . L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> NAME . NO ARR_LEN

  ! shift/reduce conflict for NO resolved as shift
    R_PAREN         reduce using rule 52 (value -> NAME .)
    PLUS            reduce using rule 52 (value -> NAME .)
    MINUS           reduce using rule 52 (value -> NAME .)
    MULTI           reduce using rule 52 (value -> NAME .)
    DIVID           reduce using rule 52 (value -> NAME .)
    $end            reduce using rule 52 (value -> NAME .)
    R_S_BRACKET     reduce using rule 52 (value -> NAME .)
    COMMA           reduce using rule 52 (value -> NAME .)
    WO              reduce using rule 52 (value -> NAME .)
    EQUAL           reduce using rule 52 (value -> NAME .)
    NOT             reduce using rule 52 (value -> NAME .)
    NOT2            reduce using rule 52 (value -> NAME .)
    LESS            reduce using rule 52 (value -> NAME .)
    LESS_EQUAL      reduce using rule 52 (value -> NAME .)
    GREATER         reduce using rule 52 (value -> NAME .)
    GREATER_EQUAL   reduce using rule 52 (value -> NAME .)
    KARA            reduce using rule 52 (value -> NAME .)
    MADE            reduce using rule 52 (value -> NAME .)
    L_S_BRACKET     shift and go to state 55
    NO              shift and go to state 56

  ! NO              [ reduce using rule 52 (value -> NAME .) ]


state 31

    (33) statement -> RETURN value .
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail

    $end            reduce using rule 33 (statement -> RETURN value .)
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26


state 32

    (34) statement -> IF L_PAREN . conditional R_PAREN
    (38) conditional -> . value sign value
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    conditional                    shift and go to state 57
    value                          shift and go to state 58

state 33

    (35) statement -> ELSEIF L_PAREN . conditional R_PAREN
    (38) conditional -> . value sign value
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    conditional                    shift and go to state 59
    value                          shift and go to state 58

state 34

    (48) statement -> FOR L_PAREN . NAME WO value KARA value MADE NUMBER ZUTSU INCREASE R_PAREN

    NAME            shift and go to state 60


state 35

    (49) statement -> WHILE L_PAREN . conditional R_PAREN
    (38) conditional -> . value sign value
    (51) value -> . NUMBER
    (52) value -> . NAME
    (53) value -> . NAME L_S_BRACKET value R_S_BRACKET
    (54) value -> . NAME L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> . NAME NO ARR_LEN
    (56) value -> . L_PAREN value R_PAREN
    (57) value -> . L_PAREN value R_PAREN NO RESULT
    (58) value -> . value PLUS value
    (59) value -> . value MINUS value
    (60) value -> . value MULTI value
    (61) value -> . value DIVID value division_tail

    NUMBER          shift and go to state 13
    NAME            shift and go to state 30
    L_PAREN         shift and go to state 6

    conditional                    shift and go to state 61
    value                          shift and go to state 58

state 36

    (2) statement -> TYPE COLON decl_names .

    $end            reduce using rule 2 (statement -> TYPE COLON decl_names .)


state 37

    (6) statement -> TYPE COLON NAME . ASSIGN value
    (31) statement -> TYPE COLON NAME . ASSIGN NAME L_PAREN args R_PAREN
    (3) decl_names -> NAME . decl_names_m
    (4) decl_names_m -> . COMMA NAME decl_names_m
    (5) decl_names_m -> .

    ASSIGN          shift and go to state 62
    COMMA           shift and go to state 64
    $end            reduce using rule 5 (decl_names_m -> .)

    decl_names_m                   shift and go to state 63

state 38

    (8) statement -> TYPE NO ARRAY . COLON NAME ASSIGN init_array

    COLON           shift and go to state 65


state 39

    (30) statement -> NAME ASSIGN NAME . L_PAREN args R_PAREN
    (52) value -> NAME .
    (53) value -> NAME . L_S_BRACKET value R_S_BRACKET
    (54) value -> NAME . L_S_BRACKET value R_S_BRACKET NO VALUE
    (55) value -> NAME . NO ARR_LEN

    L_PAREN         shift and go to state 66
    PLUS            reduce using rule 52 (value -> NAME .)
    MINUS           reduce using rule 52 (value -> NAME .)
    MULTI           reduce using rule 52 (value -> NAME .)
    DIVID           reduce using rule 52 (value -> NAME .)
    $end            reduce using rule 52 (value -> NAME .)
    L_S_BRACKET     shift and go to state 55
    NO              shift and go to state 56


state 40

    (7) statement -> NAME ASSIGN value .
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail

    $end            reduce using rule 7 (statement -> NAME ASSIGN value .)
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26


state 41

    (13) statement -> NAME L_S_BRACKET value . R_S_BRACKET ASSIGN value
    (53) value -> NAME L_S_BRACKET value . R_S_BRACKET
    (54) value -> NAME L_S_BRACKET value . R_S_BRACKET NO VALUE
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail

    R_S_BRACKET     shift and go to state 67
    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26


state 42

    (14) statement -> NAME NO END . NI value WO ADD

    NI              shift and go to state 68


state 43

    (55) value -> NAME NO ARR_LEN .

    WO              reduce using rule 55 (value -> NAME NO ARR_LEN .)
    PLUS            reduce using rule 55 (value -> NAME NO ARR_LEN .)
    MINUS           reduce using rule 55 (value -> NAME NO ARR_LEN .)
    MULTI           reduce using rule 55 (value -> NAME NO ARR_LEN .)
    DIVID           reduce using rule 55 (value -> NAME NO ARR_LEN .)
    R_PAREN         reduce using rule 55 (value -> NAME NO ARR_LEN .)
    $end            reduce using rule 55 (value -> NAME NO ARR_LEN .)
    R_S_BRACKET     reduce using rule 55 (value -> NAME NO ARR_LEN .)
    COMMA           reduce using rule 55 (value -> NAME NO ARR_LEN .)
    NO              reduce using rule 55 (value -> NAME NO ARR_LEN .)
    EQUAL           reduce using rule 55 (value -> NAME NO ARR_LEN .)
    NOT             reduce using rule 55 (value -> NAME NO ARR_LEN .)
    NOT2            reduce using rule 55 (value -> NAME NO ARR_LEN .)
    LESS            reduce using rule 55 (value -> NAME NO ARR_LEN .)
    LESS_EQUAL      reduce using rule 55 (value -> NAME NO ARR_LEN .)
    GREATER         reduce using rule 55 (value -> NAME NO ARR_LEN .)
    GREATER_EQUAL   reduce using rule 55 (value -> NAME NO ARR_LEN .)
    KARA            reduce using rule 55 (value -> NAME NO ARR_LEN .)
    MADE            reduce using rule 55 (value -> NAME NO ARR_LEN .)


state 44

    (29) statement -> NAME L_PAREN args . R_PAREN

    R_PAREN         shift and go to state 69


state 45

    (26) args -> value . args_m
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail
    (27) args_m -> . COMMA value args_m
    (28) args_m -> .

    PLUS            shift and go to state 23
    MINUS           shift and go to state 24
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26
    COMMA           shift and go to state 71
    R_PAREN         reduce using rule 28 (args_m -> .)

    args_m                         shift and go to state 70

state 46

    (15) statement -> value WO OUT .

    $end            reduce using rule 15 (statement -> value WO OUT .)


state 47

    (58) value -> value PLUS value .
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail

    WO              reduce using rule 58 (value -> value PLUS value .)
    PLUS            reduce using rule 58 (value -> value PLUS value .)
    MINUS           reduce using rule 58 (value -> value PLUS value .)
    R_PAREN         reduce using rule 58 (value -> value PLUS value .)
    $end            reduce using rule 58 (value -> value PLUS value .)
    R_S_BRACKET     reduce using rule 58 (value -> value PLUS value .)
    COMMA           reduce using rule 58 (value -> value PLUS value .)
    NO              reduce using rule 58 (value -> value PLUS value .)
    EQUAL           reduce using rule 58 (value -> value PLUS value .)
    NOT             reduce using rule 58 (value -> value PLUS value .)
    NOT2            reduce using rule 58 (value -> value PLUS value .)
    LESS            reduce using rule 58 (value -> value PLUS value .)
    LESS_EQUAL      reduce using rule 58 (value -> value PLUS value .)
    GREATER         reduce using rule 58 (value -> value PLUS value .)
    GREATER_EQUAL   reduce using rule 58 (value -> value PLUS value .)
    KARA            reduce using rule 58 (value -> value PLUS value .)
    MADE            reduce using rule 58 (value -> value PLUS value .)
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26

  ! MULTI           [ reduce using rule 58 (value -> value PLUS value .) ]
  ! DIVID           [ reduce using rule 58 (value -> value PLUS value .) ]
  ! PLUS            [ shift and go to state 23 ]
  ! MINUS           [ shift and go to state 24 ]


state 48

    (59) value -> value MINUS value .
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail

    WO              reduce using rule 59 (value -> value MINUS value .)
    PLUS            reduce using rule 59 (value -> value MINUS value .)
    MINUS           reduce using rule 59 (value -> value MINUS value .)
    R_PAREN         reduce using rule 59 (value -> value MINUS value .)
    $end            reduce using rule 59 (value -> value MINUS value .)
    R_S_BRACKET     reduce using rule 59 (value -> value MINUS value .)
    COMMA           reduce using rule 59 (value -> value MINUS value .)
    NO              reduce using rule 59 (value -> value MINUS value .)
    EQUAL           reduce using rule 59 (value -> value MINUS value .)
    NOT             reduce using rule 59 (value -> value MINUS value .)
    NOT2            reduce using rule 59 (value -> value MINUS value .)
    LESS            reduce using rule 59 (value -> value MINUS value .)
    LESS_EQUAL      reduce using rule 59 (value -> value MINUS value .)
    GREATER         reduce using rule 59 (value -> value MINUS value .)
    GREATER_EQUAL   reduce using rule 59 (value -> value MINUS value .)
    KARA            reduce using rule 59 (value -> value MINUS value .)
    MADE            reduce using rule 59 (value -> value MINUS value .)
    MULTI           shift and go to state 25
    DIVID           shift and go to state 26

  ! MULTI           [ reduce using rule 59 (value -> value MINUS value .) ]
  ! DIVID           [ reduce using rule 59 (value -> value MINUS value .) ]
  ! PLUS            [ shift and go to state 23 ]
  ! MINUS           [ shift and go to state 24 ]


state 49

    (60) value -> value MULTI value .
    (58) value -> value . PLUS value
    (59) value -> value . MINUS value
    (60) value -> value . MULTI value
    (61) value -> value . DIVID value division_tail
